Correction of text wrapping in the price list

--- a/style.css
+++ b/style.css
@@ -292,19 +292,23 @@ footer p {
     background-color: #f6a1bb;
   }
 
-  .price ol {
-    max-width: 320px;
-    margin: 0 auto;
-  }
   .price li {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    align-items: baseline;
-    gap: 12px;
-    line-height: 1.3;
+    align-items:
+    padding: 10px 0;
   }
+  
+  .price li span:first-child {
+    width: 100%;
+    padding-right: 0;
+    margin-bottom: 5px;
+    white-space: normal; /* Разрешаем перенос текста названия */
+    text-align: left;
+  }
+  
   .price li span:last-child {
-    white-space: nowrap;
+    width: 100%;
+    text-align: right; /* Цена по правому краю */
+    padding-top: 2px;
   }
 }
 
